fix header wrapping on smaller screens

--- a/www/less/main/components/header-search.less
+++ b/www/less/main/components/header-search.less
@@ -10,7 +10,8 @@
 		}
 		.form-control {
 			margin-top: 30px;
-			width: 320px;
+			min-width: 264px;
+			max-width: 320px;
 		}
 		.btn-search {
 			margin-left: 10px;
